solve bug table of content covering text

--- a/assets/css/powsybl.css
+++ b/assets/css/powsybl.css
@@ -56,6 +56,11 @@ a.call-to-action {
 
 /**********/
 /* Markdown */
+
+.markdown-body {
+  margin-right: 200px;
+}
+
 .markdown-body h1,
 .markdown-body h2,
 .markdown-body h3,
